--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   hive_flutter: ^1.1.0
   image_picker: ^0.8.5+3
   loading_animation_widget: ^1.2.0+2
+  provider: ^6.0.4
 
 dev_dependencies:
   build_runner: ^2.2.0
@@ -56,6 +57,7 @@ flutter:
   assets:
     - Assests/Images/sambhram-institute-of-technology-bangalore.jpg
     - Assests/Images/logo.jpg
+    - lib\assets\images\ezgif.com-gif-maker.png
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
     # For details regarding adding assets from package dependencies, see
