--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ flutter:
   assets:
     - Assests/Images/sambhram-institute-of-technology-bangalore.jpg
     - Assests/Images/logo.jpg
-    - lib\assets\images\ezgif.com-gif-maker.png
+    - lib/assets/images/ezgif.com-gif-maker.png
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
     # For details regarding adding assets from package dependencies, see
